# RCJ2026

./: CMakeLists.txt
lib/: CMakeLists.txt  config.h
lib/camera/: camera.c  camera.h
lib/gyro/: gyro.c  gyro.h
lib/motor/: CMakeLists.txt  motor.cpp  motor.h
lib/servo/: servo.cpp
lib/stepper/: stepper.c
main/: CMakeLists.txt  COM3_2026_01_10.22.14.09.266.txt  COM3_2026_01_10.22.14.16.790.txt  COM3_2026_01_10.22.14.40.200.txt  COM3_2026_01_10.22.15.00.642.txt  COM3_2026_01_10.22.15.25.890.txt  COM3_2026_01_10.22.16.51.595.txt  COM3_2026_01_10.22.16.58.866.txt  COM3_2026_01_10.22.17.59.641.txt  COM3_2026_01_10.22.28.39.157.txt  COM3_2026_01_10.22.42.00.929.txt  COM3_2026_01_10.22.42.41.440.txt  COM3_2026_01_10.22.42.56.348.txt  COM3_2026_01_10.22.44.25.553.txt  COM3_2026_01_10.22.44.39.460.txt  COM3_2026_01_10.22.45.10.438.txt  COM3_2026_01_10.22.45.30.325.txt  COM3_2026_01_10.22.45.44.975.txt  COM3_2026_01_10.22.45.59.024.txt  COM3_2026_01_10.22.47.28.302.txt  COM3_2026_01_10.22.51.23.703.txt  COM3_2026_01_10.22.51.28.661.txt  COM3_2026_01_11.01.03.53.637.txt  COM3_2026_01_11.01.13.14.966.txt  COM3_2026_01_11.01.13.18.854.txt  COM3_2026_01_11.01.13.38.045.txt  COM3_2026_01_11.01.13.49.379.txt  COM3_2026_01_11.01.15.50.015.txt  COM3_2026_01_11.01.16.28.179.txt  COM3_2026_01_11.01.17.17.335.txt  COM3_2026_01_11.01.17.43.759.txt  COM3_2026_01_11.01.18.55.587.txt  COM3_2026_01_11.01.19.10.653.txt  COM3_2026_01_11.01.19.34.531.txt  COM3_2026_01_11.10.03.19.364.txt  COM3_2026_01_11.12.05.58.847.txt  COM8_2026_01_11.14.47.25.267.txt  RCJ2026.cpp  ws2812.pio.h
